[package]
name = "pixy-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
reqwest = { version = "0.12.12", features = ["json", "stream", "native-tls", "rustls-tls"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.15"
clap = { version = "3.2", features = ["derive"] }

[[bin]]
name = "pixy"
path = "src/main.rs"
